force-app/main/default/objects/Activity/fields/Five9__Five9CallbackCampaignId__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9CallbackCampaignId__c</fullName>
    <label>Five9CallbackCampaignId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>