force-app/main/default/objects/Activity/fields/Five9__Five9CallbackCampaignName__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9CallbackCampaignName__c</fullName>
    <label>Five9CallbackCampaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>