force-app/main/default/objects/Activity/fields/Five9__Five9CallbackId__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9CallbackId__c</fullName>
    <label>Five9CallbackId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>