force-app/main/default/objects/Activity/fields/Five9__Five9CallbackNumber__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9CallbackNumber__c</fullName>
    <label>Five9CallbackNumber</label>
    <type>Phone</type>
</CustomField>